--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -18,13 +18,13 @@
 <div class="w-full max-w-md p-8 space-y-3 rounded-xl dark:bg-coolGray-900 dark:text-coolGray-100">
 	<div class="flex justify-center space-x-4">
 		<button class="p-3 rounded-sm">
-			<img src="/assets/images/google.svg" class="w-5 h-5 fill-current">
+			<img src="assets/images/google.svg" class="w-5 h-5 fill-current">
 		</button>
 		<button class="p-3 rounded-sm">
- 			<img src="/assets/images/microsoft.svg" class="w-5 h-5 fill-current">
+ 			<img src="assets/images/microsoft.svg" class="w-5 h-5 fill-current">
 		</button>
 		<button class="p-3 rounded-sm">
-			<img src="/assets/images/github.svg" class="w-5 h-5 fill-current">
+			<img src="assets/images/github.svg" class="w-5 h-5 fill-current">
 		</button>
 	</div>
 </div>
